fix label width and y-axis scroll
- The label <p> element inherited max-width from a more generic rule
  which made it too narrow as it overrode the width: 100% rule.
- Made the overflow: scroll rule specific to the y-axis to prevent some
  chromium-based browsers display an unneeded horizontal scrollbar

--- a/evolveum-jekyll-theme/_sass/evolveum/_lightbox.scss
+++ b/evolveum-jekyll-theme/_sass/evolveum/_lightbox.scss
@@ -80,9 +80,9 @@
   text-align: left;
   background: #fff;
   color: #000;
+  max-width: initial;
   font-size: 100%;
-  width: 100%;
-  overflow: scroll;
+  overflow-y: scroll;
   padding: 0.4em;
   margin: 0 auto;
   border-top: 1px solid #00000066;
